--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -652,6 +652,7 @@ img {
   width: 100%;
   margin-bottom: 20px;
 }
+
 .content .swipe-wrapper {
   overflow: hidden;
   position: relative;
@@ -662,6 +663,12 @@ img {
   width:100%;
   overflow: hidden;
 }
+.content .swipe-wrapper li img{
+  width: 910px;
+  height: 562px;
+  
+}
+
 
 .content .swipe-wrapper li span {
   position: absolute;
